--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -5,6 +5,10 @@
     background-image: url('../Assets/20230816_200425_0000.png');
     background-repeat: no-repeat;
 }
+
+body.active-modal{
+    overflow-y: hidden;
+}
   
 .home-container{
     max-width: 1200px;
@@ -62,7 +66,7 @@
     background: rgba(49, 49, 49, 0.6);
 }
 
-.modal-content{
+.modal-content1{
     position: absolute;
     top: 50%;
     left: 50%;
